--- a/InventoryManager/src/appstyle.css
+++ b/InventoryManager/src/appstyle.css
@@ -68,3 +68,67 @@ body {
     color: whitesmoke;
   }
 
+
+
+/***********
+        formularios
+*******/
+
+form {
+	width: 90%;
+	margin: 0 auto;
+}
+fieldset {
+    background-color: #d9d9d9;
+	margin: 25px 5px;
+}
+legend {
+    background-color: #194c52;
+    color: white;
+}
+label {
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+select, textarea, input[type=text], input[type=email], input[type=tel], input[type=date], input[type=number] {
+	background-color: white;
+	color: black;
+	border: 1px solid black;
+	height: 25px;
+	width: 100%;
+}
+textarea {
+	height: 100px;
+}
+select {
+	height: 25px;
+}
+input[type=submit] {
+	background: #e9a442;
+	color: whitesmoke;
+	border: 2px solid whitesmoke;
+	font-size: 16px;
+	margin-top: 15px;
+	padding: 5px 25px;
+}
+/******************
+Classes
+******************/
+
+.two-col {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 5px;
+}
+@media screen and (min-width: 768px) {
+	.two-col {
+		grid-gap: 15px;
+		grid-template-columns: 1fr 1fr;
+	}
+}
+@media screen and (min-width: 1440px) {
+	main {
+		width: 80%
+	}
+}
+
