--- a/InventoryManager/src/appstyle.css
+++ b/InventoryManager/src/appstyle.css
@@ -107,6 +107,7 @@ input[type=submit], button[type=submit]{
 	background: #e9a442;
 	color: whitesmoke;
 	border: 2px solid whitesmoke;
+  border-radius: 10px;
 	font-size: 16px;
 	margin-top: 15px;
   margin-bottom: 15px;
