--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <center>
-                <img src="/InventoryManager/images/EmmasLogo.png" alt="Logo" width="30%" height="30%" />
+                <img src="../Commons/images/EmmasLogo.png" alt="Logo" width="30%" height="30%" />
             </center>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -13,6 +13,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#" onclick="relocateFnc(1)" id="home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="relocateFnc(2)" id="Inventory">Inventory</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="relocateFnc(3)" id="Invoice">Invoice</a>
