--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -30,7 +30,10 @@
                     <a class="nav-link" href="#" onclick="relocateFnc(7)" id="suppliers">Suppliers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="relocateFnc(8)" id="customers">Persons</a>
+                    <a class="nav-link" href="#" onclick="relocateFnc(8)" id="Persons">Persons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="relocateFnc(9)" id="customers">Customers</a>
                 </li>
             </ul>
         </div>
