new order and create users

--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -35,6 +35,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="relocateFnc(7)" id="customers" hidden>Customers</a>
                 </li>
+                
             </ul>
         </div>
 
@@ -51,6 +52,7 @@
                 <li><a class="dropdown-item" href="#">Settings</a></li>
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li><a class="dropdown-item" href="#" onclick="downloadLogs()" id="logs" hidden>Download Logs</a></li>
+                <li><a class="dropdown-item" href="#" onclick="relocateFnc(8)" id="user-roles" hidden>Users Manager</a></li>
                 <li>
                     <hr class="dropdown-divider" />
                 </li>
