--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -35,6 +35,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="relocateFnc(7)" id="customers" hidden>Customers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="relocateFnc(8)" id="customers" hidden>Reports</a>
+                </li>
             </ul>
         </div>
 
