--- a/InventoryManager/src/Commons/css/Global.css
+++ b/InventoryManager/src/Commons/css/Global.css
@@ -4,7 +4,7 @@
   background-color: #184C52;
   border-radius: 50px;
   color: #fff;
-  margin-right: 5px;
+  margin: 5px;
   text-align: center;
   text-decoration: none;
 }
@@ -13,7 +13,7 @@
   background-color: red;
   border-radius: 50px;
   color: #fff;
-  margin-right: 5px;
+  margin: 5px;
   text-align: center;
   text-decoration: none;
 }
