changes to invoice, create new sale and usermngr

--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -18,13 +18,13 @@
                     <a class="nav-link" href="#" onclick="relocateFnc(1)" id="Inventory" >Inventory</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="relocateFnc(2)" id="Invoice" hidden>Invoice</a>
+                    <a class="nav-link" href="#" onclick="relocateFnc(2)" id="Invoice" hidden>Purchase</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="relocateFnc(3)" id="products" hidden>Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="relocateFnc(4)" id="POS" hidden>POS</a>
+                    <a class="nav-link" href="#" onclick="relocateFnc(4)" id="POS" hidden>Sales</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="relocateFnc(5)" id="suppliers" hidden>Suppliers</a>
