form fieldset padding y label de persons

--- a/InventoryManager/src/Commons/css/Global.css
+++ b/InventoryManager/src/Commons/css/Global.css
@@ -63,3 +63,11 @@ main {
   flex: 1;
   width: 100%;
 }
+
+/******** form fieldset padding ********/
+fieldset div.row {
+  padding-left: 30px !important;
+}
+fieldset legend{
+  padding-left: 20px;
+}
