--- a/InventoryManager/src/Commons/views/Header.html
+++ b/InventoryManager/src/Commons/views/Header.html
@@ -46,7 +46,7 @@
                 hidden></strong>
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                 id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle" />
+                <img src="../Commons/images/EmmasLogo.png" alt="hugenerd" width="30" height="30" class="rounded-circle" />
                 <span class="d-none d-sm-inline mx-1" id="userName">No signed in</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
